--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
 
         </div>
-        <button type="submit" class="btn btn-primary" style="margin:15px 0">Submit</button>
+        <button type="submit" class="btn btn-primary" style="margin:15px 0">Add</button>
     </form>
 
     <br><br>
